# openApi/server/openapi_server/models/get_post_header_request_params.py
@@ -1,0 +1,98 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class GetPostHeaderRequestParams(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, author=None, permlink=None):  # noqa: E501
+        """GetPostHeaderRequestParams - a model defined in OpenAPI
+
+        :param author: The author of this GetPostHeaderRequestParams.  # noqa: E501
+        :type author: str
+        :param permlink: The permlink of this GetPostHeaderRequestParams.  # noqa: E501
+        :type permlink: str
+        """
+        self.openapi_types = {
+            'author': str,
+            'permlink': str
+        }
+
+        self.attribute_map = {
+            'author': 'author',
+            'permlink': 'permlink'
+        }
+
+        self._author = author
+        self._permlink = permlink
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetPostHeaderRequestParams':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetPostHeaderRequest_params of this GetPostHeaderRequestParams.  # noqa: E501
+        :rtype: GetPostHeaderRequestParams
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def author(self):
+        """Gets the author of this GetPostHeaderRequestParams.
+
+        name of the post author's account  # noqa: E501
+
+        :return: The author of this GetPostHeaderRequestParams.
+        :rtype: str
+        """
+        return self._author
+
+    @author.setter
+    def author(self, author):
+        """Sets the author of this GetPostHeaderRequestParams.
+
+        name of the post author's account  # noqa: E501
+
+        :param author: The author of this GetPostHeaderRequestParams.
+        :type author: str
+        """
+        if author is None:
+            raise ValueError("Invalid value for `author`, must not be `None`")  # noqa: E501
+
+        self._author = author
+
+    @property
+    def permlink(self):
+        """Gets the permlink of this GetPostHeaderRequestParams.
+
+        permlink of the valid author's post  # noqa: E501
+
+        :return: The permlink of this GetPostHeaderRequestParams.
+        :rtype: str
+        """
+        return self._permlink
+
+    @permlink.setter
+    def permlink(self, permlink):
+        """Sets the permlink of this GetPostHeaderRequestParams.
+
+        permlink of the valid author's post  # noqa: E501
+
+        :param permlink: The permlink of this GetPostHeaderRequestParams.
+        :type permlink: str
+        """
+        if permlink is None:
+            raise ValueError("Invalid value for `permlink`, must not be `None`")  # noqa: E501
+
+        self._permlink = permlink
